Fixing wrapping radio and checkbox inline elements

--- a/css/frontend/variation_1.css
+++ b/css/frontend/variation_1.css
@@ -328,7 +328,7 @@
 	.pmpro_form_field-radio-item {
 		align-items: baseline;
 		flex-direction: row;
-		flex-wrap: wrap;
+		flex-wrap: nowrap;
 
 		.pmpro_form_hint {
 			flex: 0 0 100%;
